test: verify Play 2 installations and native browser integration